<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_habit" />

        <EditText
            android:id="@+id/edit_habit_name"
            style="@style/EditorFieldStyle"
            android:layout_weight="2"
            android:hint="@string/habit_name_hint"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_day" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_day"
                style="@style/spinnerStyle" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_difficulty" />

        <EditText
            android:id="@+id/select_difficulty_level"
            style="@style/EditorFieldStyle"
            android:layout_weight="2"
            android:hint="@string/difficulty_hint"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_height="wrap_content"
            android:text="@string/distance_category" />

        <EditText
            android:id="@+id/distance"
            style="@style/EditorFieldStyle"
            android:layout_weight="2"
            android:hint="@string/distance_hint"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/distance_units"
            style="@style/EditorUnitsStyle"
            android:layout_margin="@dimen/activity_margin"
            android:text="@string/unit_meters" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_enjoyment" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_enjoyment"
                style="@style/spinnerStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>